did some changes

--- a/index.html
+++ b/index.html
@@ -1,37 +1,59 @@
 <html>
 
 <head>
-<link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="index.css">
 </head>
+  
 <body>
-  <header > ajduke <span>because technology matters</span></header>
-
+  
+  <header > ajduke <span>Sr. Software Developer, Technology Enthusiast </span></header>
 
   <div  class="container">
-  <div class="contact">
-    <span>Contact Me</span>
-    
-  <p>
+    <div class="box">
+      <span>Skill Set</span>
+      <div class="grid">
+        <div class="grid-item">
+        Java
+        </div>
+        <div class="grid-item">
+        Scala
+        </div>
+        <div class="grid-item">
+        JavaScript
+        </div>
+        <div class="grid-item">
+        NodeJS
+        </div>
+        <div class="grid-item">
+        MeteorJS
+        </div>
+        <div class="grid-item">
+        MongoDB
+        </div>
+        <div class="grid-item">
+        Redis
+        </div>
+        <div class="grid-item">
+        Elastic Search
+        </div>
+        <div class="grid-item">
+        ...
+        </div>
+      </div>
+    </div>
+    <div class="box contact-form">
+      <span>Contact Me</span>
+      <p>
         <input name="name" placeholder="Enter name here ">
-    <input name="email" placeholder="Enter email address here ">
-    <input type="button" value="Submit">
-    </p>
-    
-  </div>
-  <div class="grid">
-    <div class="grid-item">
-    I am flowing here
-    </div>
-    <div class="grid-item">
-    I am flowing here
+        <input name="email" placeholder="Enter email address here ">
+        <input type="button" value="Submit">
+      </p>
     </div>
   </div>
   
-  </div>
   
-  
-    <footer>
-   @copyright 2014 , ajduke
+  <footer>
+    @copyright 2014 , ajduke
   </footer>
 </body>
 </html>
